styles/job.sass
@import 'var'

.job-list
    width: 100%
    margin: 8px
    display: flex
    align-items: center
    justify-content: center
.job
    max-width: 1000px
    height: 80px
    border: solid
    border-color: $gray
    border-width: thin
    width: 100%
    position: relative
    .post-date
        display: flex
        justify-content: center
        align-items: center
        background-color: #fff
        border-right: solid
        border-color: $gray
        border-width: thin
        color: $blue
        font-size: 1.4rem
        font-family: $font-main
        height: 100%
        width: 70px
        img
            width: 62px
    .post-img
        width: 70px
    .job-title
        position: absolute
        font:
            size: 1.4rem
            family: $font-main
        top: 10px
        left: 20px
    .job-company
        position: absolute
        font:
            size: 1.2rem
            family: $font-main
        color: #909090
        bottom: 10px
        left: 20px
    .apply
        display: flex
        align-items: center
        justify-content: center
        position: absolute
        border-radius: 30px
        right: 20px
        top: 20px
        bottom: 20px
        width: 100px
        background-color: $blue
        transition: all 0.2s ease-in-out
        span
            color: #fff
            font-size: 1.2rem
            font-family: $font-main
        a
            display: flex
            align-items: center
            justify-content: center
            text-decoration: none
            width: 100%
            height: 100%
            &:hover
                text-decoration: none
        &:hover
            box-shadow: 2px 2px 10px $shadow

